--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -16,8 +16,8 @@ These counts are the base case of the Article-Editor ranking algorithm, and are 
 
 \begin{equation}
 \begin{cases}
- d_{e}^{(0)} = \sum_{a=1}^{N_{a}}\\
- u_{a}^{(0)} = \sum_{e=1}^{N_{N_{e}}}
+ k_{e}^{(0)} = \sum_{a=1}^{N_{a}}\\
+ k_{a}^{(0)} = \sum_{e=1}^{N_{N_{e}}}
 \end{cases}
 \end{equation}
 
