--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -1,35 +1,3 @@
-@inproceedings{wang2013tell,
-    abstract = {{In this paper we address the problem of developing actionable quality models for Wikipedia, models whose features directly suggest strategies for improving the quality of a given article. We first survey the literature in order to understand the notion of article quality in the context of Wikipedia and existing approaches to automatically assess article quality. We then develop classification models with varying combinations of more or less actionable features, and find that a model that only contains clearly actionable features delivers solid performance. Lastly we discuss the implications of these results in terms of how they can help improve the quality of articles across Wikipedia.}},
-    address = {New York, NY, USA},
-    author = {Wang, Morten W. and Cosley, Dan and Riedl, John},
-    booktitle = {Proceedings of the 9th International Symposium on Open Collaboration},
-    citeulike-article-id = {13057265},
-    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=2491063},
-    citeulike-linkout-1 = {http://dx.doi.org/10.1145/2491055.2491063},
-    doi = {10.1145/2491055.2491063},
-    isbn = {978-1-4503-1852-5},
-    keywords = {open\_source, wiki},
-    location = {Hong Kong, China},
-    posted-at = {2014-02-22 04:05:27},
-    priority = {2},
-    publisher = {ACM},
-    series = {WikiSym '13},
-    title = {{Tell Me More: An Actionable Quality Model for Wikipedia}},
-    url = {http://dx.doi.org/10.1145/2491055.2491063},
-    year = {2013}
-}
-
-@book{shamma2007cooperative,
-    author = {Shamma, Jeff S.},
-    citeulike-article-id = {13057164},
-    keywords = {*file-import-14-02-22},
-    posted-at = {2014-02-22 00:33:37},
-    priority = {2},
-    publisher = {Wiley Online Library},
-    title = {{Cooperative control of distributed multi-agent systems}},
-    year = {2007}
-}
-
 @article{page1999pagerank,
     author = {Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
     citeulike-article-id = {13057092},
@@ -399,7 +367,7 @@ constructive responses to these results.}},
 }
 
 @article{ingaccolo2010scaling,
-    abstract = {{The scaling properties of human EEG have so far been analyzed predominantly in the framework of detrended fluctuation analysis (DFA). In particular, these studies suggested the existence of power-law correlations in EEG. In DFA, EEG time series are tacitly assumed to be made up of fluctuations, whose scaling behavior reflects neurophysiologically important information and polynomial trends. Even though these trends are physiologically irrelevant, they must be eliminated (detrended) to reliably estimate such measures as Hurst exponent or fractal dimension. Here, we employ the diffusion entropy method to study the scaling behavior of EEG. Unlike DFA, this method does not rely on the assumption of trends superposed on EEG fluctuations. We find that the growth of diffusion entropy of EEG increments of awake subjects with closed eyes is arrested only after approximately 0.5 s. We demonstrate that the salient features of diffusion entropy dynamics of EEG, such as the existence of short-term scaling, asymptotic saturation, and alpha wave modulation, may be faithfully reproduced using a dissipative, first-order, stochastic differential equation—an extension of the Langevin equation. The structure of such a model is utterly different from the  ” noise+trend” paradigm of DFA. Consequently, we argue that the existence of scaling properties for EEG dynamics is an open question that necessitates further studies.}},
+    abstract = {{The scaling properties of human EEG have so far been analyzed predominantly in the framework of detrended fluctuation analysis (DFA). In particular, these studies suggested the existence of power-law correlations in EEG. In DFA, EEG time series are tacitly assumed to be made up of fluctuations, whose scaling behavior reflects neurophysiologically important information and polynomial trends. Even though these trends are physiologically irrelevant, they must be eliminated (detrended) to reliably estimate such measures as Hurst exponent or fractal dimension. Here, we employ the diffusion entropy method to study the scaling behavior of EEG. Unlike DFA, this method does not rely on the assumption of trends superposed on EEG fluctuations. We find that the growth of diffusion entropy of EEG increments of awake subjects with closed eyes is arrested only after approximately 0.5 s. We demonstrate that the salient features of diffusion entropy dynamics of EEG, such as the existence of short-term scaling, asymptotic saturation, and alpha wave modulation, may be faithfully reproduced using a dissipative, first-order, stochastic differential equation—an extension of the Langevin equation. The structure of such a model is utterly different from the  ” noise+trend” paradigm of DFA. Consequently, we argue that the existence of scaling properties for EEG dynamics is an open question that necessitates further studies.}},
     author = {Ignaccolo, Massimiliano and Latka, Mirek and Jernajczyk, Wojciech and Grigolini, Paolo and West, BruceJ},
     booktitle = {Journal of Biological Physics},
     citeulike-article-id = {5441599},
@@ -760,6 +728,34 @@ constructive responses to these results.}},
     url = {http://dx.doi.org/10.1111/j.1467-9310.2009.00567.x},
     volume = {39},
     year = {2009}
+}
+
+@article{geiger2013,
+author = {R. Stuart Geiger and Aaron Halfaker.},
+    title = {{Using edit sessions to measure participation in wikipedia.}},
+    doi = {10.1145/2441776.2441873},
+    url = {http://www.stuartgeiger.com/cscw-sessions.pdf},
+    journal = {Computer supported cooperative work (CSCW '13)},
+    publisher = {ACM}, 
+    year = {2013}
+}
+
+@article{wang,
+author = {Warncke-Wang, M., Cosley, D., and Riedl, J. },
+    title = {{Tell Me More: An Actionable Quality Model for Wikipedia}},
+    url = {http://www-users.cs.umn.edu/~morten/publications/wikisym2013-tellmemore.pdf},
+    journal = {Preceedings of WikiSym '13},
+    publisher = {OpenSym}, 
+    year = {2013}
+}
+
+@article{stvilia,
+author = {Besiki Stvilia, Michael B.Twidale, Linda C. Smith, Les Gasser},
+    title = {{Assessing Information Quality of A Community-Based Encyclopedia}},
+    url = {http://mailer.fsu.edu/~bstvilia/papers/quantWiki.pdf},
+    journal = {IQ Conference 2005},
+    publisher = {IQ Conference}, 
+    year = {2005}
 }
 
 @article{halfaker2013,
@@ -2587,7 +2583,7 @@ have to acknowledge total security is a chimera--and carry more insurance.
 }
 
 @article{dibella2013,
-    abstract = {{Open source software development is becoming always more relevant. Understanding the behavior of developers in open source software projects and identifying the kinds of their contributions is an essential step to improve the efficiency of the development process and to organize the development teams more effectively. Moreover, understanding the level of participation of the different developers helps to understand which members of the development team are more important than others and who are the actual key developers. This paper investigates the behavior of open source developers and the structure of the development of open source projects through the analysis of a very large dataset: 10 well-known and widely used open source software projects for a total of more than 4 MLOC (millions of lines of code) modified distributed in more than 200 K versions. This study builds on the top of other studies in this area applying a set of rigorous statistical techniques, analyzing how developers contribute to the projects. Its novelty is in the fine gain analysis of the developers that have commit rights on the repository of the project they work on, in the automated identification of key contributors of the project, in the size of the analyzed datasets, and in the statistical techniques used to classify the behavior of the developers in an automated way. To collect such large volume of data and to ensure their integrity, a tool to automatically mine open source version control systems has been used. The main result of this study is the identification of a recurrent pattern of four kinds of contributors with the same characteristics in all the projects analyzed even if the projects are very different in domain, size, language, etc.}},
+    abstract = {{Open source software development is becoming always more relevant. Understanding the behavior of developers in open source software projects and identifying the kinds of their contributions is an essential step to improve the efficiency of the development process and to organize the development teams more effectively. Moreover, understanding the level of participation of the different developers helps to understand which members of the development team are more important than others and who are the actual key developers. This paper investigates the behavior of open source developers and the structure of the development of open source projects through the analysis of a very large dataset: 10 well-known and widely used open source software projects for a total of more than 4 MLOC (millions of lines of code) modified distributed in more than 200 K versions. This study builds on the top of other studies in this area applying a set of rigorous statistical techniques, analyzing how developers contribute to the projects. Its novelty is in the fine gain analysis of the developers that have commit rights on the repository of the project they work on, in the automated identification of key contributors of the project, in the size of the analyzed datasets, and in the statistical techniques used to classify the behavior of the developers in an automated way. To collect such large volume of data and to ensure their integrity, a tool to automatically mine open source version control systems has been used. The main result of this study is the identification of a recurrent pattern of four kinds of contributors with the same characteristics in all the projects analyzed even if the projects are very different in domain, size, language, etc.}},
     author = {di Bella, Enrico and Sillitti, Alberto and Succi, Giancarlo},
     citeulike-article-id = {11679520},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.ins.2012.09.031},
@@ -2606,7 +2602,7 @@ have to acknowledge total security is a chimera--and carry more insurance.
 }
 
 @article{baytiyeh2010,
-    abstract = {{To learn about what drives people to devote their time and expertise to creating and supporting free/open source software, a survey with Likert-scaled items measuring different types of motivations was sent to contributors of several open source projects. Open-ended comments were used to illustrate the Likert-scaled items and open-ended questions allowed respondents to express their reasons for participating in these open source communities. Results indicate that the open source contributors (n = 110, 38 paid to work on OSS projects and 72 volunteers) are motivated primarily by a sense of altruism as well as the desire to create and learn. Payment did not significantly impact the reasons for contributing to OSS projects. The comments and open-ended questions validated the findings and indicated that building a  ” Utopian” community – the desire to help for the greater good worldwide – is one of the most important motivators. Also, respondents revealed that they join and persist as members of open source communities because they enjoy the freedom to create and share free software, tools and knowledge with others inside and outside the community.}},
+    abstract = {{To learn about what drives people to devote their time and expertise to creating and supporting free/open source software, a survey with Likert-scaled items measuring different types of motivations was sent to contributors of several open source projects. Open-ended comments were used to illustrate the Likert-scaled items and open-ended questions allowed respondents to express their reasons for participating in these open source communities. Results indicate that the open source contributors (n = 110, 38 paid to work on OSS projects and 72 volunteers) are motivated primarily by a sense of altruism as well as the desire to create and learn. Payment did not significantly impact the reasons for contributing to OSS projects. The comments and open-ended questions validated the findings and indicated that building a  ” Utopian” community – the desire to help for the greater good worldwide – is one of the most important motivators. Also, respondents revealed that they join and persist as members of open source communities because they enjoy the freedom to create and share free software, tools and knowledge with others inside and outside the community.}},
     author = {Baytiyeh, Hoda and Pfaffman, Jay},
     citeulike-article-id = {7269768},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.chb.2010.04.008},
@@ -3655,7 +3651,7 @@ have to acknowledge total security is a chimera--and carry more insurance.
 }
 
 @article{kampf2012,
-    abstract = {{Internet-based social networks often reflect extreme events in nature and society by drastic increases in user activity. We study and compare the dynamics of the two major complex processes necessary for information spread via the online encyclopedia 'Wikipedia', i.e., article editing (information upload) and article access (information viewing) based on article edit-event time series and (hourly) user access-rate time series for all articles. Daily and weekly activity patterns occur in addition to fluctuations and bursting activity. The bursts (i.e., significant increases in activity for an extended period of time) are characterized by a power-law distribution of durations of increases and decreases. For describing the recurrence and clustering of bursts we investigate the statistics of the return intervals between them. We find stretched exponential distributions of return intervals in access-rate time series, while edit-event time series yield simple exponential distributions. To characterize the fluctuation behavior we apply detrended fluctuation analysis (DFA), finding that most article access-rate time series are characterized by strong long-term correlations with fluctuation exponents \^{I}±≈0.9\^{I}±≈0.9. The results indicate significant differences in the dynamics of information upload and access and help in understanding the complex process of collecting, processing, validating, and distributing information in self-organized social networks. \^{a}º We study the dynamics of information spread via Wikipedia articles. \^{a}º Fluctuations of access-rate time series scale with long-term persistence. \^{a}º Edit-events are only short-term correlated. \^{a}º The dynamics of both complex processes differ drastically.}},
+    abstract = {{Internet-based social networks often reflect extreme events in nature and society by drastic increases in user activity. We study and compare the dynamics of the two major complex processes necessary for information spread via the online encyclopedia 'Wikipedia', i.e., article editing (information upload) and article access (information viewing) based on article edit-event time series and (hourly) user access-rate time series for all articles. Daily and weekly activity patterns occur in addition to fluctuations and bursting activity. The bursts (i.e., significant increases in activity for an extended period of time) are characterized by a power-law distribution of durations of increases and decreases. For describing the recurrence and clustering of bursts we investigate the statistics of the return intervals between them. We find stretched exponential distributions of return intervals in access-rate time series, while edit-event time series yield simple exponential distributions. To characterize the fluctuation behavior we apply detrended fluctuation analysis (DFA), finding that most article access-rate time series are characterized by strong long-term correlations with fluctuation exponents \^{I}±≈0.9\^{I}±≈0.9. The results indicate significant differences in the dynamics of information upload and access and help in understanding the complex process of collecting, processing, validating, and distributing information in self-organized social networks. \^{a}º We study the dynamics of information spread via Wikipedia articles. \^{a}º Fluctuations of access-rate time series scale with long-term persistence. \^{a}º Edit-events are only short-term correlated. \^{a}º The dynamics of both complex processes differ drastically.}},
     author = {K\"{a}mpf, Mirko and Tismer, Sebastian and Kantelhardt, Jan W. and Muchnik, Lev},
     citeulike-article-id = {11080490},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.physa.2012.07.004},
@@ -3793,12 +3789,12 @@ EM algorithm for Multiscale Hawkes Processes}}
               probability density functions Pdata(r) (and
               its cumulative version)
               of the number r of earthquakes in finite space-time windows
-              for the California catalog, over fixed spatial boxes 5 ×5 km2,
-              20 ×20 km2 and 50 ×50 km2
+              for the California catalog, over fixed spatial boxes 5 ×5 km2,
+              20 ×20 km2 and 50 ×50 km2
               and time intervals 
                                 
                                 \$\tau =10,\~{}100\$
-                               and 1000 days. The data can
+                               and 1000 days. The data can
               be represented by asymptotic power law tails together with several
               cross-overs. These observations are
               explained by a simple stochastic branching process previously studied by
@@ -5506,6 +5502,20 @@ existing known limitations of PSA when aiming at the estimation of total risks.}
     year = {2006}
 }
 
+@misc{klein,
+    author = {Klein, Maximilian},
+    publisher = {Unpublished},
+    title = {{Kumusha Takes Wiki: Actionable Metrics for Uganda and Côte d’Ivoire}},
+    year = {2014},
+    url = {http://notconfusing.com/kumusha-takes-wiki-actionable-metrics-for-uganda-and-cote-divoire/}
+}
+
+@misc{editcountitis,
+	author={Wikipedia contributors},
+	url =
+	{https://en.wikipedia.org/wiki/Wikipedia:Editcountitis#Seriously.2C_though...}
+	}
+
 @article{soukhoroukova2012,
     abstract = {{The proliferation of interconnectivity and interactivity through Internet-based technologies enables new forms of support for new product development. This paper analyzes idea markets, which use widely distributed knowledge, the power of markets, and the Internet to support the crucial initial tasks of the new product development process, including the sourcing, filtering, and evaluation of new product ideas. Idea markets employ virtual stocks to represent new product ideas and allow participants to suggest and trade new product ideas in a virtual marketplace. This paper empirically explores the performance of idea markets in a real-world field study at a large, high-tech business-to-business company that includes more than 500 participants from 17 countries and features various idea sourcing tasks. The results indicate that idea markets are a feasible and promising method to support the fuzzy front end of the new product development process. Idea markets offer a platform and formal process to capture, select, and distribute ideas in an organization, which motivates employees to communicate their ideas to management. By effectively sourcing and contemporaneously filtering, idea markets help reduce the number of ideas brought to management's attention to those that seem worthy of further consideration. Because idea markets also have the ability to source many ideas, they can increase efficiency at the fuzzy front end of the new product development process.}},
     author = {Soukhoroukova, Arina and Spann, Martin and Skiera, Bernd},
@@ -6074,7 +6084,7 @@ existing known limitations of PSA when aiming at the estimation of total risks.}
 }
 
 @article{henkel2006,
-    abstract = {{This paper provides a quantitative study (N = 268) of patterns of free revealing of firm-developed innovations within embedded Linux, a type of open source software (OSS). I find that firms, without being obliged to do so, contribute many of their own developments back to public embedded Linux code, eliciting and indeed receiving informal development support from other firms. That is, they perform a part of their product development open to the public—an unthinkable idea for traditionally minded managers. Such openness obviously entails the challenge of protecting one's intellectual property. I find that firms address this issue by revealing selectively. They reveal, on average, about half of the code they have developed, while protecting the other half by various means. Revealing is strongly heterogeneous among firms. Multivariate analysis can partly explain this heterogeneity by firm characteristics and the firm's purpose behind revealing. An analysis of reasons for revealing and of the type of revealed code shows that different types of firms have different rationales for openness. Implications for management are that the conflict between downsides and benefits of openness appears manageable. Provided selective revealing is practiced deliberately, the opportunities of open development dominate.}},
+    abstract = {{This paper provides a quantitative study (N = 268) of patterns of free revealing of firm-developed innovations within embedded Linux, a type of open source software (OSS). I find that firms, without being obliged to do so, contribute many of their own developments back to public embedded Linux code, eliciting and indeed receiving informal development support from other firms. That is, they perform a part of their product development open to the public—an unthinkable idea for traditionally minded managers. Such openness obviously entails the challenge of protecting one's intellectual property. I find that firms address this issue by revealing selectively. They reveal, on average, about half of the code they have developed, while protecting the other half by various means. Revealing is strongly heterogeneous among firms. Multivariate analysis can partly explain this heterogeneity by firm characteristics and the firm's purpose behind revealing. An analysis of reasons for revealing and of the type of revealed code shows that different types of firms have different rationales for openness. Implications for management are that the conflict between downsides and benefits of openness appears manageable. Provided selective revealing is practiced deliberately, the opportunities of open development dominate.}},
     author = {Henkel, Joachim},
     citeulike-article-id = {2866511},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.respol.2006.04.010},
@@ -6823,7 +6833,7 @@ processes.}},
 }
 
 @article{hisano2011,
-    abstract = {{Zipf\^{a}s power-law distribution is a generic empirical statistical regularity found in many complex systems. However, rather than universality with a single power-law exponent (equal to 1 for Zipf\^{a}s law), there are many reported deviations that remain unexplained. A recently developed theory finds that the interplay between (i)\^{A} one of the most universal ingredients, namely stochastic proportional growth, and (ii) birth and death processes, leads to a generic power-law distribution with an exponent that depends on the characteristics of each ingredient. Here, we report the first complete empirical test of the theory and its application, based on the empirical analysis of the dynamics of market shares in the product market. We estimate directly the average growth rate of market shares and its standard deviation, the birth rates and the \^{a}death\^{a} (hazard) rate of products. We find that temporal variations and product differences of the observed power-law exponents can be fully captured by the theory with no adjustable parameters. Our results can be generalized to many systems for which the statistical properties revealed by power-law exponents are directly linked to the underlying generating mechanism.}},
+    abstract = {{Zipf\^{a}s power-law distribution is a generic empirical statistical regularity found in many complex systems. However, rather than universality with a single power-law exponent (equal to 1 for Zipf\^{a}s law), there are many reported deviations that remain unexplained. A recently developed theory finds that the interplay between (i)\^{A} one of the most universal ingredients, namely stochastic proportional growth, and (ii) birth and death processes, leads to a generic power-law distribution with an exponent that depends on the characteristics of each ingredient. Here, we report the first complete empirical test of the theory and its application, based on the empirical analysis of the dynamics of market shares in the product market. We estimate directly the average growth rate of market shares and its standard deviation, the birth rates and the \^{a}death\^{a} (hazard) rate of products. We find that temporal variations and product differences of the observed power-law exponents can be fully captured by the theory with no adjustable parameters. Our results can be generalized to many systems for which the statistical properties revealed by power-law exponents are directly linked to the underlying generating mechanism.}},
     author = {Hisano, Ryohei and Sornette, Didier and Mizuno, Takayuki},
     citeulike-article-id = {9704959},
     citeulike-linkout-0 = {http://dx.doi.org/10.1103/physreve.84.026117},
@@ -11825,7 +11835,7 @@ important class of entrepreneurs, those backed by venture capital. Using a dynam
 }
 
 @article{raymond1999,
-    abstract = {{Abstract  I anatomize a successful open-source project, fetchmail, that was run as a deliberate test of some theories about software engineering suggested by the history of Linux. I discuss these theories in terms of two fundamentally different development styles, the "cathedral" model, representing most of the commercial world, versus the "bazaar" model of the Linux world. I show that these models derive from opposing assumptions about the nature of the software-debugging task. I then make a sustained argument from the Linux experience for the proposition that "Given enough eyeballs, all bugs are shallow," suggest productive analogies with other self-correcting systems of selfish agents, and conclude with some exploration of the implications of this insight for the future of software.}},
+    abstract = {{Abstract  I anatomize a successful open-source project, fetchmail, that was run as a deliberate test of some theories about software engineering suggested by the history of Linux. I discuss these theories in terms of two fundamentally different development styles, the "cathedral" model, representing most of the commercial world, versus the "bazaar" model of the Linux world. I show that these models derive from opposing assumptions about the nature of the software-debugging task. I then make a sustained argument from the Linux experience for the proposition that "Given enough eyeballs, all bugs are shallow," suggest productive analogies with other self-correcting systems of selfish agents, and conclude with some exploration of the implications of this insight for the future of software.}},
     author = {Raymond, Eric},
     citeulike-article-id = {6532298},
     citeulike-linkout-0 = {http://dx.doi.org/10.1007/s12130-999-1026-0},
@@ -14342,7 +14352,7 @@ natural selection in mathematical terms.}},
 }
 
 @article{gandolfo2008,
-    abstract = {{Abstract  The economics commonly credited with the introduction of the Lotka-Volterra equations into economics to examine cyclical problems is Richard Goodwin (1965). In this paper we show that the Italian economist Giuseppe Palomba had used these equationsmuch earlier (1939), and describe Palomba's model in detail, pointing out his surprisinglymodern conclusions and suggestions for future work.}},
+    abstract = {{Abstract  The economics commonly credited with the introduction of the Lotka-Volterra equations into economics to examine cyclical problems is Richard Goodwin (1965). In this paper we show that the Italian economist Giuseppe Palomba had used these equationsmuch earlier (1939), and describe Palomba's model in detail, pointing out his surprisinglymodern conclusions and suggestions for future work.}},
     author = {Gandolfo, Giancarlo},
     citeulike-article-id = {3914352},
     citeulike-linkout-0 = {http://dx.doi.org/10.1007/s12210-008-0023-7},
@@ -15422,4 +15432,23 @@ pragmatic.}},
     volume = {4},
     year = {1999}
 }
+
+@Misc{website:wikinewsreporter,
+OPTauthor = {Laura Hale},
+OPTtitle = {The role of English Wikipedia’s top content creators in perpetuating gender bias},
+OPThowpublished = {blog},
+OPTmonth = {2},
+OPTyear = {2014},
+url = 	"http://wikinewsreporter.wordpress.com/2014/02/10/the-role-of-english-wikipedias-top-content-creators-in-perpetuating-gender-bias/"
+}
+
+@Misc{website:nyt,
+OPTauthor = {Amanda Filipacchi},
+OPTtitle = {Wikipedias Sexism Toward Female Novelists},
+OPThowpublished = {news},
+OPTmonth = {4},
+OPTyear = {2013},
+url = 	"http://www.nytimes.com/2013/04/28/opinion/sunday/wikipedias-sexism-toward-female-novelists.html"
+}
+
 
